5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1764_1183.log
== TEST (2019-05-23 20:55:42) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0

while(v[i]>0):
	i=i+1

print(i)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:56:03) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0

while(vetor[i]>0):
	i=i+1

print(i)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:56:32) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0

while(vetor[i]>0):
	i=i+1

print(i)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 12:18:00) 
-- CODE:
from numpy import *

vetor=array(eval(int(input("vetor: "))))

i=0
positivo=0

while(i<size(vetor)):
	if(vetor[i]>0):
		positivo=positivo+1
		i=i+1
a=0
b=0
while()		
		
		
	
	
-- EXECUTION TIME:
0.114137
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 14
    while()		
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:09:37) 
-- CODE:
from numpy import *

vetor=array(eval(int(input("vetor: "))))

i=0


while(i<size(vetor)):
	if(vetor[i<0]):
		vetor=vetor-vetor[i]
	else:
		vetor=vetor
	i=i+1	

print(vetor)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:09:54) 
-- CODE:
from numpy import *

vetor=array(eval(int(input("vetor: "))))

i=0


while(i<size(vetor)):
	if(vetor[i<0]):
		vetor=vetor-vetor[i]
	else:
		vetor=vetor
	i=i+1	

print(vetor)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:10:22) 
-- CODE:
from numpy import *

vetor=array(eval(int(input("vetor: "))))

i=0


while(i<size(vetor)):
	if(vetor[i<0]):
		vetor=vetor-vetor[i]
	else:
		vetor=vetor
	i=i+1	

print(vetor)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:11:13) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0


while(i<size(vetor)):
	if(vetor[i<0]):
		vetor=vetor-vetor[i]
	else:
		vetor=vetor
	i=i+1	

a=int(vetor)
print(a)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:13:00) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0
a=int(vetor)

while(i<size(a)):
	if(a[i<0]):
		a=a-a[i]
	else:
		a=a
	i=i+1	


print(a)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:14:09) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0
a=int(vetor)

while(i<size(vetor)):
	if(a[i]<0):
		a=a-a[i]
	else:
		a=a
	i=i+1	


print(a)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:14:51) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))
print(vetor)
i=0

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:16:14) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0
a=int(vetor)

while(size(vetor)!=i):
	
	if(a[i]<0):
		a=a-a[i]
	else:
		a=a
	i=i+1	


print(a)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:17:25) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0
int(vetor)

while(size(vetor)!=i):
	
	if(vetor[i]<0):
		vetor=vetor-vetor[i]
	else:
		vetor=vetor
	i=i+1	


print(vetor)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:18:09) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

i=0


while(size(vetor)!=i):
	
	if(vetor[i]<0):
		vetor=vetor-vetor[i]
	else:
		vetor=vetor
	i=i+1	


print(vetor)		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:36:49) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<size(vetor)):
	if(vetor[a]>0):
		v[b]=v[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:36:49) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<size(vetor)):
	if(vetor[a]>0):
		v[b]=v[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:37:25) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<size(vetor)):
	if(vetor[a]>0):
		v[b]=v[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:38:02) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<size(vetor)):
	if(vetor[a]>0):
		v[b]=v[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:38:58) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<size(v)):
	if(vetor[a]>0):
		v[b]=v[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:40:03) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<size(v)):
	if(vetor[a]>0):
		v[b]=vetor[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:40:41) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<size(v)+1):
	if(vetor[a]>0):
		v[b]=vetor[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:42:23) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<=size(v)):
	if(vetor[a]>0):
		v[b]=vetor[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:42:55) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<=size(v)+1):
	if(vetor[a]>0):
		v[b]=vetor[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:43:07) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<=size(v)+1):
	if(vetor[a]>0):
		v[b]=vetor[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- EXECUTION TIME:
1.24644
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:43:48) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<=size(v)):
	if(vetor[a]>0):
		v[b]=vetor[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:44:12) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<=size(v)+1):
	if(vetor[a]>0):
		v[b]=vetor[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:44:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("vetor: ")))

cont=0
i=0

while(cont<size(vetor)):
	if(vetor[cont]>0):
		i=i+1
	cont=cont+1	

v=zeros(i, dtype=int)	

a=0
b=0
while(a<=size(v)+1):
	if(vetor[a]>0):
		v[b]=vetor[a]
		b=b+1
	a=a+1
print(v)	

		
	
	
-- EXECUTION TIME:
0.530034
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:46:07) 
-- CODE:
from numpy import*

vet = array(eval(input"valor de n:"))

y = array([x for x in vet if x>0])
print(y)		
	
	
-- EXECUTION TIME:
0.211007
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 3
    vet = array(eval(input"valor de n:"))
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:46:13) 
-- CODE:
from numpy import*

vet = array(eval(input"valor de n:"))

y = array([x for x in vet if x>0])
print(y)		
	
	
-- ERROR:
File "XXXX", line 3
    vet = array(eval(input"valor de n:"))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:46:34) 
-- CODE:
from numpy import*

vet = array(eval(input("valor de n:")))

y = array([x for x in vet if x>0])
print(y)		
	
	
-- EXECUTION TIME:
0.522564
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:46:36) 
-- CODE:
from numpy import*

vet = array(eval(input("valor de n:")))

y = array([x for x in vet if x>0])
print(y)		
	
	
-- EXECUTION TIME:
0.590984
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:47:20) 
-- CODE:
from numpy import*

vet = array(eval(input("valor de n:")))

y = array([x for x in vet if x>0])
print(y)		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
